salesforce_sfdx_QA/main/default/objects/CIS_Attribute_Mapping__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>