salesforce_sfdx_QA/main/default/objects/CIS_Attribute_Mapping__c/fields/Minimum_required_length__c.field-meta.xml
<CustomField>
    <fullName>Minimum_required_length__c</fullName>
    <label>Minimum required length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>