salesforce_sfdx_QA/main/default/objects/CIS_Attribute_Mapping__c/fields/Sorting_Tag__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Tag__c</fullName>
    <label>Sorting Tag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>