salesforce_sfdx_QA/main/default/objects/CIS_Attribute_Mapping__c/fields/Use_As_a_Search_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Use_As_a_Search_Parameter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use As a Search Parameter</label>
    <type>Checkbox</type>
</CustomField>